# PlaySport

./: .gitignore  CMakeLists.txt  README.md
docx/: PlaySport.pptx  Технический проект.docx
public/: index.html
src/: main.cpp
src/adapters/: DataAdapter.cpp  DataAdapter.h
src/config/: Config.cpp  Config.h
src/controllers/: AuthController.cpp  AuthController.h  MainController.cpp  MainController.h  UserController.cpp  UserController.h  WorkoutController.cpp  WorkoutController.h
src/models/: Goal.cpp  Goal.h  ModelBase.h  ModelFactory.cpp  ModelFactory.h  User.cpp  User.h  Workout.cpp  Workout.h
src/services/: AuthService.cpp  AuthService.h  NotificationService.cpp  NotificationService.h  TaskQueue.cpp  TaskQueue.h
src/strategies/: AuthStrategy.cpp  AuthStrategy.h
src/views/: JsonView.cpp  JsonView.h
